--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,35 +1,25 @@
 jenkins:
-  systemMessage: "Welcome to Jenkins!"
-  securityRealm:
-    local:
-      allowsSignup: false
-      users:
-        - id: Dravid
-          password: pass123
-  authorizationStrategy:
-    globalMatrix:
-      permissions:
-        - "Overall/Administer:*"
-        - "Job/Build:*"
-jobs:
-  - script: >
-      pipeline {
-        agent any
-        stages {
-          stage('Build') {
-            steps {
-              sh 'echo "Building..."'
+  plugins:
+    - multibranch-workflow-plugin
+    - workflow-cps-global-lib
+
+  job-dsl:
+    jobs:
+      - script: >
+          multibranchPipelineJob('my-multibranch-pipeline') {
+            branchSources {
+              git {
+                remote('https://github.com/my-org/my-repo.git')
+                credentials('my-git-creds')
+                includes('*/master', '*/develop')
+                excludes('*/feature/*')
+              }
+            }
+            configure {
+              def scriptPath = 'Jenkinsfile'
+              def scriptCharset = 'UTF-8'
+              def script = scm.read(scriptPath, scriptCharset)
+              factory.script(script)
             }
           }
-          stage('Test') {
-            steps {
-              sh 'echo "Testing..."'
-            }
-          }
-          stage('Deploy') {
-            steps {
-              sh 'echo "Deploying..."'
-            }
-          }
-        }
-      }
+
