--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,25 +1,13 @@
 jenkins:
-  plugins:
-    - multibranch-workflow-plugin
-    - workflow-cps-global-lib
-
-  job-dsl:
-    jobs:
-      - script: >
-          multibranchPipelineJob('my-multibranch-pipeline') {
-            branchSources {
-              git {
-                remote('https://github.com/my-org/my-repo.git')
-                credentials('my-git-creds')
-                includes('*/master', '*/develop')
-                excludes('*/feature/*')
-              }
-            }
-            configure {
-              def scriptPath = 'Jenkinsfile'
-              def scriptCharset = 'UTF-8'
-              def script = scm.read(scriptPath, scriptCharset)
-              factory.script(script)
-            }
-          }
-
+  systemMessage: "Controlled by Configuration as Code"
+jobs:
+  - script: >
+  	multibranchPipelineJob('configuration-as-code') {
+      	branchSources {
+          	git {
+              	id = 'configuration-as-code'
+              	remote('https://github.com/Dravid-Developer/MultiBranchJenkins.git')
+                includes('*')
+          	}
+      }
+}
